add card image wrappers

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <h4 class="section_subtitle">Always know what you’ll pay.</h4>
         <section class="pricing_table">
             <section class="pricing_card">
-                <img src="./assets/images/Snail Toy.H15.2k.png" alt="">
+                <div class="card_image_wrapper">
+                    <img src="./assets/images/Snail Toy.H15.2k.png" alt="">
+                </div>
                 <h2 class="card_title">Personal</h2>
                 <h4 class="card_subtitle">Best Choice for Individuals</h4>
                 <p class="price">99</p>
@@ -24,7 +26,9 @@
                 <a href="#" class="button_outline">Start Free Trial</a>
             </section>
             <section class="pricing_card">
-                <img src="./assets/images/Toy Car.H07 1.png" alt="">
+                <div class="card_image_wrapper">
+                    <img src="./assets/images/Toy Car.H07 1.png" alt="">
+                </div>
                 <h2 class="card_title">Business</h2>
                 <h4 class="card_subtitle">Small Businesses & Freelancers</h4>
                 <p class="price">99</p>
@@ -36,7 +40,9 @@
                 <a href="#" class="button_outline">Start Free Trial</a>
             </section>
             <section class="pricing_card">
-                <img src="./assets/images/Cartoon Minibus.G03 1.png" alt="">
+                <div class="card_image_wrapper">
+                    <img src="./assets/images/Cartoon Minibus.G03 1.png" alt="">
+                </div>
                 <h2 class="card_title">Developer</h2>
                 <h4 class="card_subtitle">Agencies and Developers</h4>
                 <p class="price">99</p>
@@ -49,7 +55,9 @@
                 <a href="#" class="button_outline">Start Free Trial</a>
             </section>
             <section class="pricing_card">
-                <img src="./assets/images/Toy Cannon.G15.2k.png" alt="">
+                <div class="card_image_wrapper">
+                    <img src="./assets/images/Toy Cannon.G15.2k.png" alt="">
+                </div>
                 <h2 class="card_title">Agency</h2>
                 <h4 class="card_subtitle">Design a custom package</h4>
                 <p class="price">99</p>
