add badge to card

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                 <a href="#" class="button_outline">Start Free Trial</a>
             </section>
             <section class="pricing_card">
+                <div class="card_badge">
+                    <img src="./assets/images/star.svg" alt="decorative"><span class="badge_text">Most Popular</span>
+                </div>
                 <div class="card_image_wrapper">
                     <img src="./assets/images/Cartoon Minibus.G03 1.png" alt="">
                 </div>
